<resources>
    <string name="app_name">PRJ666 Shelter Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Shelter">Shelters</string>
    <string name="menu_logout">Logout</string>

    <string name="Location_ID">ID</string>
    <string name="Location_Name">Location Name</string>
    <string name="Location_Address">Address</string>

    <string name="LocationPostalCode">Postal Code</string>
    <string name="LocationCity">City</string>
    <string name="ShelterGroup">Shelter Group</string>
    <string name="OrganizationName">Organization</string>
    <string name="ProgramName">Program Name</string>
    <string name="Sector">Sector</string>
    <string name="ProgramModel">Program Model</string>
    <string name="ProgramArea">Program Area</string>
    <string name="CapacityType">Capacity Type</string>

    <string name="Capacity_Actual_Bed">Capacity Actual Bed</string>
    <string name="Capacity_Funding_Bed">Capacity Funding Bed</string>
    <string name="Capacity_Occupied_Bed">Capacity Occupied Bed</string>
    <string name="Capacity_Unoccupied_Bed">Capacity Unoccupied Bed</string>
    <string name="Capacity_Unavailable_Bed">Capacity Unavailable Bed</string>
    <string name="Label1">Organizer &amp; Program</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>