<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/LoginFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.prj666shelterdashboard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_shelter"
            app:destination="@id/nav_shelter" />
        <action
            android:id="@+id/action_nav_home_to_nav_shelterDetail"
            app:destination="@id/nav_shelterDetail" />
    </fragment>

    <fragment
        android:id="@+id/nav_shelter"
        android:name="com.example.prj666shelterdashboard.ui.gallery.GalleryFragment"
        android:label="@string/menu_Shelter"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_shelter_to_nav_shelterDetail"
            app:destination="@id/nav_shelterDetail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.prj666shelterdashboard.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_shelterDetail"
        android:name="com.example.prj666shelterdashboard.ui.shelterDetail.ShelterDetail"
        android:label="Shelter Details"
        tools:layout="@layout/fragment_shelter_detail" >
        <action
            android:id="@+id/action_nav_shelterDetail_to_nav_editDetail"
            app:destination="@id/nav_editDetail" />
    </fragment>

    <fragment
        android:id="@+id/nav_editDetail"
        android:name="com.example.prj666shelterdashboard.ui.shelterDetail.EditShelterDetails"
        android:label="Edit Shelter Details"
        tools:layout="@layout/fragment_edit_shelter_details"
        />

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.prj666shelterdashboard.ui.loginScreen.login"
        android:label="Login Screen"
        tools:layout="@layout/fragment_login"
        >
        <action
            android:id="@+id/action_LoginFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>